# 23SystemHacking_study

./: .gdb_history  .gitignore  README.md  test.c  wk2_gdbCommands.md
23WinterKeeperCtf/: .gdb_history  bof_exploit.py  bof_tutorial  bof_tutorial.c  bof_tutorial.md  bof_tutorial_writeup.md  capture_the_flag  howcanyou  kill_the_orc  kill_the_orc_exploit.py  typing_game_exploit.py  typing_game_writeup.md  welcome_sol.md  welcome_writeup.md
assembler_study/: test  test.s
bin_analysis_tool/: CMakeLists.txt  bin_analysis_tool.c  target  target.c
bin_analysis_tool/include/: LoadFile.h
bin_analysis_tool/lib/: CMakeLists.txt  LoadFile.c
bin_analysis_tool/libs/: CMakeLists.txt
bin_analysis_tool/libs/ELFanalysis/: CMakeLists.txt  ELFanalysis.c
bin_analysis_tool/libs/LoadBinaryFile/: CMakeLists.txt  LoadBinaryFile.c
pwnable/: .gdb_history
week2/: .gdb_history  study.md  test.c
week3/: .gdb_history  excode  excode.c  excode.md  test  test.c
week6/: a  a.c  pwn_collision.md
wk1_cmake_helloworld/: cmake_tutorial.md  cmake_tutorial_writeup.md
wk2_assembly_gdb/: .gdb_history  hw  hw_sourcefile  hw_sourcefile.c  test  test.S  test2  test2.c
wk3/: .gdb_history  hw_func  hw_func_sourcefile.c  stack.c  write-up
wk3,4_memory_stack/: hw_func_sourcefile.c  stack  wk4_hw_bof.md  wk4_hw_bof_exploit.py  wk4_hw_bof_writeup.md
wk3_memory_stack/: .gdb_history  answer  answer.c  hw_func_sourcefile  write_up.md
wk5_rootme_bof2/: wk5_rootme_bofBasic2_writeup.md
wk6_rootme_bof3/: ch16  test.c
wk7_aslr_pie/: do_you_want_some_pie  do_you_want_some_pie.c  pie.md  (+1 more)
(+5 files in other folders)
